Fix bugs for dark mode

--- a/sass/partials/_mobile-DOM.scss
+++ b/sass/partials/_mobile-DOM.scss
@@ -37,9 +37,11 @@ body {
     font-size: 27px;
   }
 
-  img {
-    margin-top: 50px;
-    padding-right: 20px;
+  #mode {
+    margin-top: 45px;
+    margin-right: 30px;
+    color: white;
+    font-size: 27px;
   }
 }
 
@@ -124,7 +126,7 @@ body {
 }
 
 footer {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   text-align: center;
   padding: 20px;
   p {
@@ -133,5 +135,5 @@ footer {
 }
 
 .material-symbols-outlined {
-  font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 0, 'opsz' 40;
+  font-variation-settings: 'FILL' 0, 'wght' 200, 'GRAD' 0, 'opsz' 50;
 }
