--- a/sass/style.css
+++ b/sass/style.css
@@ -45,9 +45,11 @@ body {
   padding-left: 20px;
   font-size: 27px;
 }
-.list-header img {
-  margin-top: 50px;
-  padding-right: 20px;
+.list-header #mode {
+  margin-top: 45px;
+  margin-right: 30px;
+  color: white;
+  font-size: 27px;
 }
 
 .mobile-lightMode-BG {
@@ -125,7 +127,7 @@ body {
 }
 
 footer {
-  margin-top: 2rem;
+  margin-top: 1.5rem;
   text-align: center;
   padding: 20px;
 }
@@ -134,7 +136,7 @@ footer p {
 }
 
 .material-symbols-outlined {
-  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 40;
+  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 50;
 }
 
 h1,
